# aetherguard-rag-security-kit

./: README.md  pyproject.toml
example/: README.md  requirements.txt
example/app/: __init__.py  aetherguard_service.py  chroma_store.py  config.py  main.py  ollama_client.py  schemas.py  text_splitter.py
src/aetherguard_rag_security/: __init__.py  _http.py  client.py  exceptions.py  models.py
tests/: __init__.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py  test_client.py
