[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherguard-rag-security"
version = "0.1.0"
description = "AetherGuard RAG Pipeline Security SDK — zero-trust retrieval governance for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["rag", "security", "llm", "aetherguard", "zero-trust"]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aetherguard_rag_security"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]
